Add meta to head and connect css file

--- a/index.html
+++ b/index.html
@@ -11,3 +11,4 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Pawsome Pawtraits</title>
 </head>
+<h1>Pawsome Pawtraits</h1>
