--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="portfolio of digital dog portrature">
-    <meta name="keywords" content="dog portraits, dog, art, digital art, portrature">
+<body>
 
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Pawsome Pawtraits</title>
-</head>
-<h1>Pawsome Pawtraits</h1>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="portfolio of digital dog portrature">
+        <meta name="keywords" content="dog portraits, dog, art, digital art, portrature">
+
+        <link rel="stylesheet" href="assets/css/style.css">
+        <title>Pawsome Pawtraits</title>
+    </head>
+
+    <!-- Navbar -->
+    <div class="container">
+        <div class="logo">
+            <a href="index.html" id="home">
+                <h1>Pawsome Pawtraits</h1>
+            </a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#"></a>Dogs</li>
+                <li><a href="#"></a>About</li>
+                <li><a href="#"></a>Learn</li>
+            </ul>
+        </nav>
+    </div>
+
+    <!-- Font awesome script -->
+    <script src="https://kit.fontawesome.com/25fb3548cd.js" crossorigin="anonymous"></script>
+</body>
