Add basic styles to css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#"></a>Dogs</li>
+                <li><a href="gallery.html"></a>Dogs</li>
                 <li><a href="#"></a>About</li>
                 <li><a href="#"></a>Learn</li>
             </ul>
