Add styles to the navbar

--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
     </head>
 
     <!-- Navbar -->
-    <div class="container">
-        <div class="logo">
-            <a href="index.html" id="home">
-                <h1>Pawsome Pawtraits</h1>
-            </a>
+    <div class="navbar">
+        <div class="container flex">
+            <div class="logo">
+                <a href="index.html" id="home">
+                    <h1>Pawsome Pawtraits</h1>
+                </a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="gallery.html"></a>Dogs</li>
+                    <li><a href="#"></a>About</li>
+                    <li><a href="#"></a>Learn</li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="gallery.html"></a>Dogs</li>
-                <li><a href="#"></a>About</li>
-                <li><a href="#"></a>Learn</li>
-            </ul>
-        </nav>
     </div>
 
     <!-- Font awesome script -->
