Add footer and styling to landing page

--- a/index.html
+++ b/index.html
@@ -16,23 +16,47 @@
 <body>
     <section class="hero">
         <!-- Navbar -->
-        <div class="navbar">
-            <div class="container flex">
-                <div class="logo">
-                    <a href="index.html" id="home">
-                        <h1>Pawsome Pawtraits</h1>
-                    </a>
+
+        <header>
+            <div class="navbar">
+                <div class="container flex">
+                    <div class="logo">
+                        <a href="index.html" id="home">
+                            <h1>Pawsome Pawtraits</h1>
+                        </a>
+                    </div>
+                    <nav>
+                        <ul>
+                            <li><a href="gallery.html"></a>Dogs</li>
+                            <li><a href="#"></a>About</li>
+                            <li><a href="#"></a>Learn</li>
+                        </ul>
+                    </nav>
                 </div>
-                <nav>
-                    <ul>
-                        <li><a href="gallery.html"></a>Dogs</li>
-                        <li><a href="#"></a>About</li>
-                        <li><a href="#"></a>Learn</li>
-                    </ul>
-                </nav>
             </div>
-        </div>
     </section>
+    </header>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container"></div>
+        <!-- Footer social -->
+        <section class="ft-social">
+            <ul class="ft-social-list">
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-github"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            </ul>
+        </section>
+
+        <!-- Footer legal -->
+        <section class="ft-legal">
+            <h5 class="ft-copyright-ttj">&copy; 2022 Copyright TTJ.</h5>
+        </section>
+    </footer>
 
     <!-- Font awesome script -->
     <script src="https://kit.fontawesome.com/25fb3548cd.js" crossorigin="anonymous"></script>
