--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
                             <h1>Pawsome Pawtraits</h1>
                         </a>
                     </div>
-                    <nav>
+                    <nav class="main-nav">
+                        <label for="toggle">&#9776;</label>
+                        <input type="checkbox" id="toggle">
                         <ul>
-                            <li><a href="gallery.html"></a>Dogs</li>
-                            <li><a href="#"></a>About</li>
-                            <li><a href="#"></a>Learn</li>
+                            <li><a href="gallery.html">Dogs</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Learn</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -55,6 +57,7 @@
         <!-- Footer legal -->
         <section class="ft-legal">
             <h5 class="ft-copyright-ttj">&copy; 2022 Copyright TTJ.</h5>
+        </section>
         </section>
     </footer>
 
