Add responsive grid gallery on the gallery.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container"></div>
         <!-- Footer social -->
         <section class="ft-social">
-            <ul class="ft-social-list">
+            <ul class="ft-social-list" id="menu">
                 <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
