--- a/gallery.html
+++ b/gallery.html
@@ -36,6 +36,24 @@
     </section>
     </header>
 
+    <section>
+        <div class="image-grid">
+            <img src="assets/images/dogs-low-res/low res dog 1.png" alt="">
+            <img src="assets/images/dogs-low-res/low res dog 2.png" alt="">
+            <img src="assets/images/dogs-low-res/low res dog 3.png" alt="">
+            <img src="assets/images/dogs-low-res/low res dog 4.png" alt="">
+            <img src="assets/images/dogs-low-res/low res dog 5.png" alt="">
+            <img src="assets/images/dogs-low-res/low res dog 6.png" alt="">
+            <img src="assets/images/dogs-low-res/low res dog 7.png" alt="">
+            <img src="assets/images/dogs-low-res/low res dog 8.png" alt="">
+            <img src="assets/images/dogs-low-res/low res dog 9.png" alt="">
+            <img src="assets/images/dogs-low-res/low res dog 10.png" alt="">
+            <img src="assets/images/dogs-low-res/low res dog 11.png" alt="">
+            <img src="assets/images/dogs-low-res/low res dog 12.png" alt="">
+            <img src="assets/images/dogs-low-res/low res dog 13.png" alt="">
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container"></div>
