Fix bug causing menu items now to appear in burger

--- a/gallery.html
+++ b/gallery.html
@@ -15,25 +15,27 @@
 
 <body>
 
-        <!-- Navbar -->
-        <header>
-            <div class="navbar">
-                <div class="container flex">
-                    <div class="logo">
-                        <a href="index.html" id="home">
-                            <h1>Pawsome Pawtraits</h1>
-                        </a>
-                    </div>
-                    <nav>
-                        <ul>
-                            <li><a href="gallery.html" class="active">Dogs</a></li>
-                            <li><a href="#"></a>About</li>
-                            <li><a href="#"></a>Learn</li>
-                        </ul>
-                    </nav>
+    <!-- Navbar -->
+    <header id="header">
+        <div class="navbar">
+            <div class="container flex">
+                <div class="logo">
+                    <a href="index.html" id="home">
+                        <h1>Pawsome Pawtraits</h1>
+                    </a>
                 </div>
+                <nav class="main-nav">
+                    <label for="toggle">&#9776;</label>
+                    <input type="checkbox" id="toggle">
+                    <ul id="menu">
+                        <li><a href="gallery.html" class="active">Dogs</a></li>
+                        <li><a href="#"></a>About</li>
+                        <li><a href="#"></a>Learn</li>
+                    </ul>
+                </nav>
             </div>
-    </section>
+        </div>
+        </section>
     </header>
 
     <section>
