--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="hero">
         <!-- Navbar -->
 
-        <header>
+        <header id="header">
             <div class="navbar">
                 <div class="container flex">
                     <div class="logo">
@@ -28,7 +28,7 @@
                     <nav class="main-nav">
                         <label for="toggle">&#9776;</label>
                         <input type="checkbox" id="toggle">
-                        <ul>
+                        <ul id="menu">
                             <li><a href="gallery.html">Dogs</a></li>
                             <li><a href="#">About</a></li>
                             <li><a href="#">Learn</a></li>
@@ -40,25 +40,27 @@
     </header>
 
     <!-- Footer -->
-    <footer class="footer">
-        <div class="container"></div>
-        <!-- Footer social -->
-        <section class="ft-social">
-            <ul class="ft-social-list" id="menu">
-                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-github"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-            </ul>
-        </section>
+    <footer class="footer-landing">
+        <div class="container">
+            <!-- Footer social -->
+            <section class="ft-social">
+                <ul class="ft-social-list" id="menu">
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-github"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                </ul>
+            </section>
 
-        <!-- Footer legal -->
-        <section class="ft-legal">
-            <h5 class="ft-copyright-ttj">&copy; 2022 Copyright TTJ.</h5>
-        </section>
-        </section>
+            <!-- Footer legal -->
+            <section class="ft-legal">
+                <h5 class="ft-copyright-ttj">&copy; 2022 Copyright TTJ.</h5>
+            </section>
+            </section>
+
+        </div>
     </footer>
 
     <!-- Font awesome script -->
