Fix error causing nav links to disable & add background image to images folder

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="hero">
+
         <!-- Navbar -->
 
         <header id="header">
@@ -29,9 +29,15 @@
                         <label for="toggle">&#9776;</label>
                         <input type="checkbox" id="toggle">
                         <ul id="menu">
-                            <li><a href="gallery.html">Dogs</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="#">Learn</a></li>
+                            <li>
+                                <a href="gallery.html" class="active">Dogs</a>
+                            </li>
+                            <li>
+                                <a href="about.html" class="active">About</a>
+                            </li>
+                            <li>
+                                <a href="#">Learn</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
@@ -58,7 +64,7 @@
             <section class="ft-legal">
                 <h5 class="ft-copyright-ttj">&copy; 2022 Copyright TTJ.</h5>
             </section>
-            </section>
+            
 
         </div>
     </footer>
