--- a/gallery.html
+++ b/gallery.html
@@ -29,8 +29,8 @@
                     <input type="checkbox" id="toggle">
                     <ul id="menu">
                         <li><a href="gallery.html" class="active">Dogs</a></li>
-                        <li><a href="#"></a>About</li>
-                        <li><a href="#"></a>Learn</li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="#">Learn</a></li>
                     </ul>
                 </nav>
             </div>
