Fix error causing non responsive footer on landing page

--- a/index.html
+++ b/index.html
@@ -36,32 +36,34 @@
                     </nav>
                 </div>
             </div>
+
+        </header>
+
     </section>
-    </header>
 
-    <!-- Footer -->
-    <footer class="footer-landing">
-        <div class="container">
-            <!-- Footer social -->
-            <section class="ft-social">
-                <ul class="ft-social-list" id="menu">
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-github"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                </ul>
-            </section>
+   <!-- Footer -->
+   <footer class="footer">
+    <div class="container"></div>
+    <!-- Footer social -->
+    <section class="ft-social">
+        <ul class="ft-social-list">
+            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fab fa-github"></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+        </ul>
+    </section>
 
-            <!-- Footer legal -->
-            <section class="ft-legal">
-                <h5 class="ft-copyright-ttj">&copy; 2022 Copyright TTJ.</h5>
-            </section>
-            </section>
+    <!-- Footer legal -->
+    <section class="ft-legal">
+        <h5 class="ft-copyright-ttj">&copy; 2022 Copyright TTJ.</h5>
+    </section>
+</footer>
 
-        </div>
-    </footer>
+
+     
 
     <!-- Font awesome script -->
     <script src="https://kit.fontawesome.com/25fb3548cd.js" crossorigin="anonymous"></script>
