--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
 
 <body>
 
+    <section class="background-about">
+
         <!-- Navbar -->
 
         <header id="header">
@@ -45,29 +47,29 @@
     </section>
     </header>
 
+    </section>
+
     <!-- Footer -->
-    <footer class="footer-landing">
-        <div class="container">
-            <!-- Footer social -->
-            <section class="ft-social">
-                <ul class="ft-social-list" id="menu">
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-github"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                </ul>
-            </section>
+    <footer class="footer">
+        <div class="container"></div>
+        <!-- Footer social -->
+        <section class="ft-social">
+            <ul class="ft-social-list">
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-github"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            </ul>
+        </section>
 
-            <!-- Footer legal -->
-            <section class="ft-legal">
-                <h5 class="ft-copyright-ttj">&copy; 2022 Copyright TTJ.</h5>
-            </section>
-            
-
-        </div>
+        <!-- Footer legal -->
+        <section class="ft-legal">
+            <h5 class="ft-copyright-ttj">&copy; 2022 Copyright TTJ.</h5>
+        </section>
     </footer>
+
 
     <!-- Font awesome script -->
     <script src="https://kit.fontawesome.com/25fb3548cd.js" crossorigin="anonymous"></script>
