Add grid and basic structure to the about page

--- a/about.html
+++ b/about.html
@@ -14,11 +14,8 @@
 </head>
 
 <body>
-
     <section class="background-about">
-
         <!-- Navbar -->
-
         <header id="header">
             <div class="navbar">
                 <div class="container flex">
@@ -44,8 +41,30 @@
                     </nav>
                 </div>
             </div>
-    </section>
-    </header>
+
+        </header>
+
+
+
+        <!-- Craig -->
+        <section class="craig">
+            <div class="container grid">
+                <div class="craig-image">
+                    <img src="assets/images/Craig Kelly headshot.jpg" alt="a picture of Craig">
+                </div>
+                <div class="craig-text">
+                    <h1>Hi I'm Craig</h1>
+                    <p>I've been immortalising cute pooches since 2019. It's a fun side hussle for me as to butter my
+                        bread
+                        I work as a graphic designer for some lovely companies. You can check out more of my graphic
+                        design
+                        wokr here </p>
+                    <button class="btn1">
+                        <a href="#" class="craig-website">My Work</a>
+                    </button>
+                </div>
+            </div>
+        </section>
 
     </section>
 
