Add craig's graphic design website to site

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                         design
                         wokr here </p>
                     <button class="btn1">
-                        <a href="#" class="craig-website">My Work</a>
+                        <a href="https://www.craigcreates.co.uk/" class="craig-website">My Work</a>
                     </button>
                 </div>
             </div>
