--- a/about.html
+++ b/about.html
@@ -52,15 +52,15 @@
                 <div class="craig-image">
                     <img src="assets/images/Craig Kelly headshot.jpg" alt="a picture of Craig">
                 </div>
-                <div class="craig-text">
+                <div class="craig-text card">
                     <h1>Hi I'm Craig</h1>
                     <p>I've been immortalising cute pooches since 2019. It's a fun side hussle for me as to butter my
                         bread
                         I work as a graphic designer for some lovely companies. You can check out more of my graphic
                         design
                         wokr here </p>
-                    <button class="btn1">
-                        <a href="https://www.craigcreates.co.uk/" class="craig-website">My Work</a>
+                    <button class="btn1 btn-outline">
+                        <a href="https://www.craigcreates.co.uk/" class="craig-website" target="_blank">My Work</a>
                     </button>
                 </div>
             </div>
