--- a/about.html
+++ b/about.html
@@ -63,6 +63,20 @@
                         <a href="https://www.craigcreates.co.uk/" class="craig-website" target="_blank">My Work</a>
                     </button>
                 </div>
+                <div class="craig-text card">
+                    <h1>Hi I'm Craig</h1>
+                    <p>It can be challenging to write about yourself. However, the good news is if you follow the
+                        formula and tips below, you should be able to generate an engaging ‘About Me’ statement without
+                        too much of a struggle.</p>
+                    <button class="btn1 btn-outline">
+                        <a href="https://www.craigcreates.co.uk/" class="craig-website" target="_blank">My Work</a>
+                    </button>
+                </div>
+                <div class="wall-of-prints">
+                    <img src="assets/images/wallofprints.png" alt="9 pictures of Craig's digital dogs">
+                </div>
+            </div>
+
             </div>
         </section>
 
