--- a/about.html
+++ b/about.html
@@ -37,6 +37,9 @@
                             <li>
                                 <a href="#">Learn</a>
                             </li>
+                            <li>
+                                <a href="#">Contact</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
