--- a/gallery.html
+++ b/gallery.html
@@ -31,6 +31,7 @@
                         <li><a href="gallery.html" class="active">Dogs</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="#">Learn</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
             </div>
