Style the about page grid futher and fix bug on the footer

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <body>
     <section class="background-about">
         <!-- Navbar -->
-        <header id="header">
+        <header id="header-about">
             <div class="navbar">
                 <div class="container flex">
                     <div class="logo">
@@ -52,19 +52,25 @@
         <!-- Craig -->
         <section class="craig">
             <div class="container grid">
-                <div class="craig-image">
-                    <img src="assets/images/Craig Kelly headshot.jpg" alt="a picture of Craig">
-                </div>
                 <div class="craig-text card">
                     <h1>Hi I'm Craig</h1>
                     <p>I've been immortalising cute pooches since 2019. It's a fun side hussle for me as to butter my
                         bread
                         I work as a graphic designer for some lovely companies. You can check out more of my graphic
-                        design
+                        design. the word source code. There is no need to overwrite bootstrap. Firstly no one has the exact same style as bootstrap so you are going to create a .css file that will overwrite certain values. That is were the font change should happen. Its not so problematic with css, but generally people who code in css move to javascript and this destruction of source is brought along with it. I am being pedantic, but good practice is good. – 
+                        user1752532
+                         Jun 6, 2014 at 7:22
                         wokr here </p>
                     <button class="btn1 btn-outline">
                         <a href="https://www.craigcreates.co.uk/" class="craig-website" target="_blank">My Work</a>
                     </button>
+                </div>
+                
+                <div class="craig-image">
+                    <img src="assets/images/Craig Kelly headshot.jpg" alt="a picture of Craig">
+                </div>
+                <div class="wall-of-prints">
+                    <img src="assets/images/wallofprints.png" alt="9 pictures of Craig's digital dogs">
                 </div>
                 <div class="craig-text card">
                     <h1>Hi I'm Craig</h1>
@@ -75,9 +81,6 @@
                         <a href="https://www.craigcreates.co.uk/" class="craig-website" target="_blank">My Work</a>
                     </button> 
                 </div> 
-                <div class="wall-of-prints">
-                    <img src="assets/images/wallofprints.png" alt="9 pictures of Craig's digital dogs">
-                </div>
             </div>
 
             </div>
