--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="hero">
+    <section class="bg-contact">
         <!-- Navbar -->
 
         <header id="header">
