Add contact form to contact page

--- a/contact.html
+++ b/contact.html
@@ -40,31 +40,52 @@
 
         </header>
 
+        <section class="contact-form">
+            <div class="container grid">
+                <div class="contact-form-card">
+                    <form action="">
+                        <div>
+                            <input type="text" name="name" placeholder="Name" required>
+                        </div>
+                        <div>
+                            <input type="email" name="email" placeholder="Email" required>
+                        </div>
+                        <div>
+                            <input type="text " name="name" placeholder="Name" required>
+                        </div>
+                        <input type="submit" value="Send" class="btn1">
+                    </form>
+                </div>
+            </div>
+        </section>
+
     </section>
 
-   <!-- Footer -->
-   <footer class="footer">
-    <div class="container"></div>
-    <!-- Footer social -->
-    <section class="ft-social">
-        <ul class="ft-social-list">
-            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fab fa-github"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-        </ul>
-    </section>
-
-    <!-- Footer legal -->
-    <section class="ft-legal">
-        <h5 class="ft-copyright-ttj">&copy; 2022 Copyright TTJ.</h5>
-    </section>
-</footer>
 
 
-     
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container"></div>
+        <!-- Footer social -->
+        <section class="ft-social">
+            <ul class="ft-social-list">
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-github"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            </ul>
+        </section>
+
+        <!-- Footer legal -->
+        <section class="ft-legal">
+            <h5 class="ft-copyright-ttj">&copy; 2022 Copyright TTJ.</h5>
+        </section>
+    </footer>
+
+
+
 
     <!-- Font awesome script -->
     <script src="https://kit.fontawesome.com/25fb3548cd.js" crossorigin="anonymous"></script>
