--- a/contact.html
+++ b/contact.html
@@ -74,15 +74,15 @@
             <div class="contact-top">
                 <div class="contact-form">
                     <h3>Say hi!</h3>
-                    <p>Would you like to portratise your Perfect Pooch? Collaborate on a project? Or just find out more?</p>
+                    <p>Would you like to portratise your Perfect Pooch? Collaborate on a project? Or just find out more?
+                    </p>
                     <p>Pop me a message in the form below...</p>
                     <form method="post" action="https://formdump.codeinstitute.net/">
                         <div class="input-wrap">
                             <input type="text" name="name" placeholder="Name" required>
                         </div>
                         <div class="input-wrap">
-                            <!-- Email type changed to search to diable autofil for good uX-->
-                            <input type="search" name="email" placeholder="Email" autocomplete="off" required>
+                            <input type="email" name="email" placeholder="Email" autocomplete="off" required>
                         </div>
                         <div class="input-wrap">
                             <input type="text" name="subject" placeholder="Subject" required>
