fix bug in form

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
                             <input type="text" name="name" placeholder="Name" required>
                         </div>
                         <div class="input-wrap">
-                            <input type="email" name="email" placeholder="Email" autocomplete="off" required>
+                            <input type="email" name="email" placeholder="Email" required>
                         </div>
                         <div class="input-wrap">
                             <input type="text" name="subject" placeholder="Subject" required>
