exchange image of craig on about page and add additional styling to grid elements

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                 </div>
                 
                 <div class="craig-image">
-                    <img src="assets/images/Craig Kelly headshot.jpg" alt="a picture of Craig">
+                    <img src="assets/images/Craig-headshot-4 2.jpg" alt="a picture of Craig">
                 </div>
                 <div class="wall-of-prints">
                     <img src="assets/images/wallofprints.png" alt="9 pictures of Craig's digital dogs">
