Create learn page and boilerplate html, link to other pages

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                                 <a href="about.html" class="active">About</a>
                             </li>
                             <li>
-                                <a href="#">Learn</a>
+                                <a href="learn.html">Learn</a>
                             </li>
                             <li>
                                 <a href="contact.html">Contact</a>
