--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                         <ul id="menu">
                             <li><a href="gallery.html">Dogs</a></li>
                             <li><a href="about.html">About</a></li>
-                            <li><a href="#">Learn</a></li>
+                            <li><a href="learn.html">Learn</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav>
